Updated the 3D image creation page of the digital twin
